--- a/src/components/NavBar/index.module.css
+++ b/src/components/NavBar/index.module.css
@@ -64,9 +64,9 @@
 
 .centerButton {
     position: absolute;
-    top: -18px;
-    width: 52px;
-    height: 52px;
+    top: -12px;
+    width: 48px;
+    height: 48px;
     border-radius: 50%;
     border: 4px solid #000000;
     background-color: #1DB954;
